sample/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> expression
Rule 3     statement -> statement expression
Rule 4     expression -> phrase CR
Rule 5     expression -> H1 phrase CR
Rule 6     expression -> H2 phrase CR
Rule 7     expression -> H3 phrase CR
Rule 8     expression -> HR CR
Rule 9     expression -> H CR
Rule 10    expression -> hr CR
Rule 11    expression -> UL phrase CR
Rule 12    expression -> ul
Rule 13    expression -> ol
Rule 14    phrase -> factor
Rule 15    phrase -> phrase factor
Rule 16    phrase -> phrase SYMBOL
Rule 17    phrase -> phrase phrase
Rule 18    phrase -> strong_fact STRONG
Rule 19    phrase -> em_fact EM
Rule 20    phrase -> code_fact CODE
Rule 21    phrase -> anglebrac_fact RANGLEBRAC
Rule 22    phrase -> name brac_fact RBRAC
Rule 23    strong_fact -> strong_fact factor
Rule 24    strong_fact -> STRONG factor
Rule 25    strong_fact -> strong_fact SYMBOL
Rule 26    em_fact -> em_fact factor
Rule 27    em_fact -> EM factor
Rule 28    em_fact -> em_fact SYMBOL
Rule 29    hr -> EM EM
Rule 30    hr -> hr EM
Rule 31    code_fact -> code_fact factor
Rule 32    code_fact -> CODE factor
Rule 33    code_fact -> code_fact SYMBOL
Rule 34    anglebrac_fact -> anglebrac_fact factor
Rule 35    anglebrac_fact -> LANGLEBRAC factor
Rule 36    anglebrac_fact -> anglebrac_fact SYMBOL
Rule 37    name_fact -> name_fact factor
Rule 38    name_fact -> LBOXBRAC factor
Rule 39    name -> name_fact RBOXBRAC
Rule 40    brac_fact -> brac_fact factor
Rule 41    brac_fact -> LBRAC factor
Rule 42    brac_fact -> brac_fact SYMBOL
Rule 43    ul_fact -> ul_fact factor
Rule 44    ul_fact -> UL factor
Rule 45    ul_fact -> ul_fact SYMBOL
Rule 46    ulli -> em_fact CR
Rule 47    ulli -> ul_fact CR
Rule 48    ul -> ul ulli
Rule 49    ul -> ulli
Rule 50    ol_fact -> ol_fact factor
Rule 51    ol_fact -> OL factor
Rule 52    ol_fact -> ol_fact SYMBOL
Rule 53    olli -> ol_fact CR
Rule 54    ol -> ol olli
Rule 55    ol -> olli
Rule 56    factor -> TEXT

Terminals, with rules where they appear

CODE                 : 20 32
CR                   : 4 5 6 7 8 9 10 11 46 47 53
EM                   : 19 27 29 29 30
H                    : 9
H1                   : 5
H2                   : 6
H3                   : 7
HR                   : 8
LANGLEBRAC           : 35
LBOXBRAC             : 38
LBRAC                : 41
OL                   : 51
RANGLEBRAC           : 21
RBOXBRAC             : 39
RBRAC                : 22
STRONG               : 18 24
SYMBOL               : 16 25 28 33 36 42 45 52
TEXT                 : 56
UL                   : 11 44
error                : 

Nonterminals, with rules where they appear

anglebrac_fact       : 21 34 36
body                 : 0
brac_fact            : 22 40 42
code_fact            : 20 31 33
em_fact              : 19 26 28 46
expression           : 2 3
factor               : 14 15 23 24 26 27 31 32 34 35 37 38 40 41 43 44 50 51
hr                   : 10 30
name                 : 22
name_fact            : 37 39
ol                   : 13 54
ol_fact              : 50 52 53
olli                 : 54 55
phrase               : 4 5 6 7 11 15 16 17 17
statement            : 1 3
strong_fact          : 18 23 25
ul                   : 12 48
ul_fact              : 43 45 47
ulli                 : 48 49

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> . expression
    (3) statement -> . statement expression
    (4) expression -> . phrase CR
    (5) expression -> . H1 phrase CR
    (6) expression -> . H2 phrase CR
    (7) expression -> . H3 phrase CR
    (8) expression -> . HR CR
    (9) expression -> . H CR
    (10) expression -> . hr CR
    (11) expression -> . UL phrase CR
    (12) expression -> . ul
    (13) expression -> . ol
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (29) hr -> . EM EM
    (30) hr -> . hr EM
    (48) ul -> . ul ulli
    (49) ul -> . ulli
    (54) ol -> . ol olli
    (55) ol -> . olli
    (56) factor -> . TEXT
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
    (35) anglebrac_fact -> . LANGLEBRAC factor
    (36) anglebrac_fact -> . anglebrac_fact SYMBOL
    (39) name -> . name_fact RBOXBRAC
    (46) ulli -> . em_fact CR
    (47) ulli -> . ul_fact CR
    (53) olli -> . ol_fact CR
    (37) name_fact -> . name_fact factor
    (38) name_fact -> . LBOXBRAC factor
    (43) ul_fact -> . ul_fact factor
    (44) ul_fact -> . UL factor
    (45) ul_fact -> . ul_fact SYMBOL
    (50) ol_fact -> . ol_fact factor
    (51) ol_fact -> . OL factor
    (52) ol_fact -> . ol_fact SYMBOL

    H1              shift and go to state 26
    H2              shift and go to state 24
    H3              shift and go to state 25
    HR              shift and go to state 4
    H               shift and go to state 18
    UL              shift and go to state 27
    EM              shift and go to state 2
    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    LBOXBRAC        shift and go to state 31
    OL              shift and go to state 20

    body                           shift and go to state 15
    em_fact                        shift and go to state 1
    ol                             shift and go to state 22
    name                           shift and go to state 23
    ol_fact                        shift and go to state 16
    hr                             shift and go to state 17
    strong_fact                    shift and go to state 10
    olli                           shift and go to state 11
    name_fact                      shift and go to state 19
    ul                             shift and go to state 9
    ulli                           shift and go to state 28
    anglebrac_fact                 shift and go to state 29
    code_fact                      shift and go to state 21
    statement                      shift and go to state 13
    factor                         shift and go to state 14
    phrase                         shift and go to state 7
    ul_fact                        shift and go to state 6
    expression                     shift and go to state 30

state 1

    (19) phrase -> em_fact . EM
    (26) em_fact -> em_fact . factor
    (28) em_fact -> em_fact . SYMBOL
    (46) ulli -> em_fact . CR
    (56) factor -> . TEXT

    EM              shift and go to state 32
    SYMBOL          shift and go to state 33
    CR              shift and go to state 35
    TEXT            shift and go to state 5

    factor                         shift and go to state 34

state 2

    (29) hr -> EM . EM
    (27) em_fact -> EM . factor
    (56) factor -> . TEXT

    EM              shift and go to state 36
    TEXT            shift and go to state 5

    factor                         shift and go to state 37

state 3

    (32) code_fact -> CODE . factor
    (56) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 38

state 4

    (8) expression -> HR . CR

    CR              shift and go to state 39


state 5

    (56) factor -> TEXT .

    CR              reduce using rule 56 (factor -> TEXT .)
    SYMBOL          reduce using rule 56 (factor -> TEXT .)
    TEXT            reduce using rule 56 (factor -> TEXT .)
    STRONG          reduce using rule 56 (factor -> TEXT .)
    EM              reduce using rule 56 (factor -> TEXT .)
    CODE            reduce using rule 56 (factor -> TEXT .)
    LANGLEBRAC      reduce using rule 56 (factor -> TEXT .)
    LBOXBRAC        reduce using rule 56 (factor -> TEXT .)
    RBOXBRAC        reduce using rule 56 (factor -> TEXT .)
    RBRAC           reduce using rule 56 (factor -> TEXT .)
    RANGLEBRAC      reduce using rule 56 (factor -> TEXT .)


state 6

    (47) ulli -> ul_fact . CR
    (43) ul_fact -> ul_fact . factor
    (45) ul_fact -> ul_fact . SYMBOL
    (56) factor -> . TEXT

    CR              shift and go to state 40
    SYMBOL          shift and go to state 41
    TEXT            shift and go to state 5

    factor                         shift and go to state 42

state 7

    (4) expression -> phrase . CR
    (15) phrase -> phrase . factor
    (16) phrase -> phrase . SYMBOL
    (17) phrase -> phrase . phrase
    (56) factor -> . TEXT
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
    (35) anglebrac_fact -> . LANGLEBRAC factor
    (36) anglebrac_fact -> . anglebrac_fact SYMBOL
    (39) name -> . name_fact RBOXBRAC
    (37) name_fact -> . name_fact factor
    (38) name_fact -> . LBOXBRAC factor

    CR              shift and go to state 48
    SYMBOL          shift and go to state 45
    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    EM              shift and go to state 44
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    LBOXBRAC        shift and go to state 31

    em_fact                        shift and go to state 43
    name                           shift and go to state 23
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 19
    anglebrac_fact                 shift and go to state 29
    code_fact                      shift and go to state 21
    factor                         shift and go to state 46
    phrase                         shift and go to state 47

state 8

    (24) strong_fact -> STRONG . factor
    (56) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 49

state 9

    (12) expression -> ul .
    (48) ul -> ul . ulli
    (46) ulli -> . em_fact CR
    (47) ulli -> . ul_fact CR
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (43) ul_fact -> . ul_fact factor
    (44) ul_fact -> . UL factor
    (45) ul_fact -> . ul_fact SYMBOL

  ! shift/reduce conflict for EM resolved as shift
  ! shift/reduce conflict for UL resolved as shift
    H1              reduce using rule 12 (expression -> ul .)
    H2              reduce using rule 12 (expression -> ul .)
    H3              reduce using rule 12 (expression -> ul .)
    HR              reduce using rule 12 (expression -> ul .)
    H               reduce using rule 12 (expression -> ul .)
    TEXT            reduce using rule 12 (expression -> ul .)
    STRONG          reduce using rule 12 (expression -> ul .)
    CODE            reduce using rule 12 (expression -> ul .)
    LANGLEBRAC      reduce using rule 12 (expression -> ul .)
    LBOXBRAC        reduce using rule 12 (expression -> ul .)
    OL              reduce using rule 12 (expression -> ul .)
    $end            reduce using rule 12 (expression -> ul .)
    EM              shift and go to state 44
    UL              shift and go to state 51

  ! UL              [ reduce using rule 12 (expression -> ul .) ]
  ! EM              [ reduce using rule 12 (expression -> ul .) ]

    em_fact                        shift and go to state 50
    ulli                           shift and go to state 52
    ul_fact                        shift and go to state 6

state 10

    (18) phrase -> strong_fact . STRONG
    (23) strong_fact -> strong_fact . factor
    (25) strong_fact -> strong_fact . SYMBOL
    (56) factor -> . TEXT

    STRONG          shift and go to state 54
    SYMBOL          shift and go to state 53
    TEXT            shift and go to state 5

    factor                         shift and go to state 55

state 11

    (55) ol -> olli .

    OL              reduce using rule 55 (ol -> olli .)
    H1              reduce using rule 55 (ol -> olli .)
    H2              reduce using rule 55 (ol -> olli .)
    H3              reduce using rule 55 (ol -> olli .)
    HR              reduce using rule 55 (ol -> olli .)
    H               reduce using rule 55 (ol -> olli .)
    UL              reduce using rule 55 (ol -> olli .)
    EM              reduce using rule 55 (ol -> olli .)
    TEXT            reduce using rule 55 (ol -> olli .)
    STRONG          reduce using rule 55 (ol -> olli .)
    CODE            reduce using rule 55 (ol -> olli .)
    LANGLEBRAC      reduce using rule 55 (ol -> olli .)
    LBOXBRAC        reduce using rule 55 (ol -> olli .)
    $end            reduce using rule 55 (ol -> olli .)


state 12

    (35) anglebrac_fact -> LANGLEBRAC . factor
    (56) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 56

state 13

    (1) body -> statement .
    (3) statement -> statement . expression
    (4) expression -> . phrase CR
    (5) expression -> . H1 phrase CR
    (6) expression -> . H2 phrase CR
    (7) expression -> . H3 phrase CR
    (8) expression -> . HR CR
    (9) expression -> . H CR
    (10) expression -> . hr CR
    (11) expression -> . UL phrase CR
    (12) expression -> . ul
    (13) expression -> . ol
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (29) hr -> . EM EM
    (30) hr -> . hr EM
    (48) ul -> . ul ulli
    (49) ul -> . ulli
    (54) ol -> . ol olli
    (55) ol -> . olli
    (56) factor -> . TEXT
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
    (35) anglebrac_fact -> . LANGLEBRAC factor
    (36) anglebrac_fact -> . anglebrac_fact SYMBOL
    (39) name -> . name_fact RBOXBRAC
    (46) ulli -> . em_fact CR
    (47) ulli -> . ul_fact CR
    (53) olli -> . ol_fact CR
    (37) name_fact -> . name_fact factor
    (38) name_fact -> . LBOXBRAC factor
    (43) ul_fact -> . ul_fact factor
    (44) ul_fact -> . UL factor
    (45) ul_fact -> . ul_fact SYMBOL
    (50) ol_fact -> . ol_fact factor
    (51) ol_fact -> . OL factor
    (52) ol_fact -> . ol_fact SYMBOL

    $end            reduce using rule 1 (body -> statement .)
    H1              shift and go to state 26
    H2              shift and go to state 24
    H3              shift and go to state 25
    HR              shift and go to state 4
    H               shift and go to state 18
    UL              shift and go to state 27
    EM              shift and go to state 2
    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    LBOXBRAC        shift and go to state 31
    OL              shift and go to state 20

    em_fact                        shift and go to state 1
    olli                           shift and go to state 11
    ol                             shift and go to state 22
    name                           shift and go to state 23
    ol_fact                        shift and go to state 16
    hr                             shift and go to state 17
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 19
    ul                             shift and go to state 9
    ulli                           shift and go to state 28
    anglebrac_fact                 shift and go to state 29
    code_fact                      shift and go to state 21
    factor                         shift and go to state 14
    phrase                         shift and go to state 7
    ul_fact                        shift and go to state 6
    expression                     shift and go to state 57

state 14

    (14) phrase -> factor .

    CR              reduce using rule 14 (phrase -> factor .)
    SYMBOL          reduce using rule 14 (phrase -> factor .)
    TEXT            reduce using rule 14 (phrase -> factor .)
    STRONG          reduce using rule 14 (phrase -> factor .)
    EM              reduce using rule 14 (phrase -> factor .)
    CODE            reduce using rule 14 (phrase -> factor .)
    LANGLEBRAC      reduce using rule 14 (phrase -> factor .)
    LBOXBRAC        reduce using rule 14 (phrase -> factor .)


state 15

    (0) S' -> body .



state 16

    (53) olli -> ol_fact . CR
    (50) ol_fact -> ol_fact . factor
    (52) ol_fact -> ol_fact . SYMBOL
    (56) factor -> . TEXT

    CR              shift and go to state 60
    SYMBOL          shift and go to state 58
    TEXT            shift and go to state 5

    factor                         shift and go to state 59

state 17

    (10) expression -> hr . CR
    (30) hr -> hr . EM

    CR              shift and go to state 61
    EM              shift and go to state 62


state 18

    (9) expression -> H . CR

    CR              shift and go to state 63


state 19

    (39) name -> name_fact . RBOXBRAC
    (37) name_fact -> name_fact . factor
    (56) factor -> . TEXT

    RBOXBRAC        shift and go to state 65
    TEXT            shift and go to state 5

    factor                         shift and go to state 64

state 20

    (51) ol_fact -> OL . factor
    (56) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 66

state 21

    (20) phrase -> code_fact . CODE
    (31) code_fact -> code_fact . factor
    (33) code_fact -> code_fact . SYMBOL
    (56) factor -> . TEXT

    CODE            shift and go to state 68
    SYMBOL          shift and go to state 67
    TEXT            shift and go to state 5

    factor                         shift and go to state 69

state 22

    (13) expression -> ol .
    (54) ol -> ol . olli
    (53) olli -> . ol_fact CR
    (50) ol_fact -> . ol_fact factor
    (51) ol_fact -> . OL factor
    (52) ol_fact -> . ol_fact SYMBOL

  ! shift/reduce conflict for OL resolved as shift
    H1              reduce using rule 13 (expression -> ol .)
    H2              reduce using rule 13 (expression -> ol .)
    H3              reduce using rule 13 (expression -> ol .)
    HR              reduce using rule 13 (expression -> ol .)
    H               reduce using rule 13 (expression -> ol .)
    UL              reduce using rule 13 (expression -> ol .)
    EM              reduce using rule 13 (expression -> ol .)
    TEXT            reduce using rule 13 (expression -> ol .)
    STRONG          reduce using rule 13 (expression -> ol .)
    CODE            reduce using rule 13 (expression -> ol .)
    LANGLEBRAC      reduce using rule 13 (expression -> ol .)
    LBOXBRAC        reduce using rule 13 (expression -> ol .)
    $end            reduce using rule 13 (expression -> ol .)
    OL              shift and go to state 20

  ! OL              [ reduce using rule 13 (expression -> ol .) ]

    olli                           shift and go to state 70
    ol_fact                        shift and go to state 16

state 23

    (22) phrase -> name . brac_fact RBRAC
    (40) brac_fact -> . brac_fact factor
    (41) brac_fact -> . LBRAC factor
    (42) brac_fact -> . brac_fact SYMBOL

    LBRAC           shift and go to state 71

    brac_fact                      shift and go to state 72

state 24

    (6) expression -> H2 . phrase CR
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (56) factor -> . TEXT
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
    (35) anglebrac_fact -> . LANGLEBRAC factor
    (36) anglebrac_fact -> . anglebrac_fact SYMBOL
    (39) name -> . name_fact RBOXBRAC
    (37) name_fact -> . name_fact factor
    (38) name_fact -> . LBOXBRAC factor

    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    EM              shift and go to state 44
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    LBOXBRAC        shift and go to state 31

    em_fact                        shift and go to state 43
    name                           shift and go to state 23
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 19
    anglebrac_fact                 shift and go to state 29
    code_fact                      shift and go to state 21
    factor                         shift and go to state 14
    phrase                         shift and go to state 73

state 25

    (7) expression -> H3 . phrase CR
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (56) factor -> . TEXT
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
    (35) anglebrac_fact -> . LANGLEBRAC factor
    (36) anglebrac_fact -> . anglebrac_fact SYMBOL
    (39) name -> . name_fact RBOXBRAC
    (37) name_fact -> . name_fact factor
    (38) name_fact -> . LBOXBRAC factor

    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    EM              shift and go to state 44
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    LBOXBRAC        shift and go to state 31

    em_fact                        shift and go to state 43
    name                           shift and go to state 23
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 19
    anglebrac_fact                 shift and go to state 29
    code_fact                      shift and go to state 21
    factor                         shift and go to state 14
    phrase                         shift and go to state 74

state 26

    (5) expression -> H1 . phrase CR
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (56) factor -> . TEXT
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
    (35) anglebrac_fact -> . LANGLEBRAC factor
    (36) anglebrac_fact -> . anglebrac_fact SYMBOL
    (39) name -> . name_fact RBOXBRAC
    (37) name_fact -> . name_fact factor
    (38) name_fact -> . LBOXBRAC factor

    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    EM              shift and go to state 44
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    LBOXBRAC        shift and go to state 31

    em_fact                        shift and go to state 43
    name                           shift and go to state 23
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 19
    anglebrac_fact                 shift and go to state 29
    code_fact                      shift and go to state 21
    factor                         shift and go to state 14
    phrase                         shift and go to state 75

state 27

    (11) expression -> UL . phrase CR
    (44) ul_fact -> UL . factor
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (56) factor -> . TEXT
    (23) strong_fact -> . strong_fact factor
    (24) strong_fact -> . STRONG factor
    (25) strong_fact -> . strong_fact SYMBOL
    (26) em_fact -> . em_fact factor
    (27) em_fact -> . EM factor
    (28) em_fact -> . em_fact SYMBOL
    (31) code_fact -> . code_fact factor
    (32) code_fact -> . CODE factor
    (33) code_fact -> . code_fact SYMBOL
    (34) anglebrac_fact -> . anglebrac_fact factor
